--- a/docs/4.6-Telas da Aplicação.md
+++ b/docs/4.6-Telas da Aplicação.md
@@ -77,26 +77,36 @@ Para cadastrar novos produtos, o usuário deve clicar em Produtos e então clica
 
 ## Cadastrar produtos (Produto Simples)
 ![Produtos](images/fluxo-tela/Produtos-2.png)
-Modal para cadastro de produtos simples
+Para cadastrar um produto simples, o usuário precisa preencher todos os campos e clicar em Cadastrar.
 
 ## Cadastrar produtos (Kit - 1)
 ![Produtos](images/fluxo-tela/Produtos-3.png)
+Para cadastrar Kits, o usuário precisa selecionar a chave do tipo de produto "Kit", e então preencher todos os campos, além de selecionar os produtos (já cadastrados no estoque) que irão compor o Kit.
 
 ## Cadastrar produtos (Kit - 2)
 ![Produtos](images/fluxo-tela/Produtos-4.png)
+Tela para seleção dos produtos que irão compor o Kit, com um campo de busca para facilitar a seleção.
 
 ## Detalhes do Produto (Produto Simples)
 ![Produtos](images/fluxo-tela/Produtos-5.png)
+Tela de detalhes do produto, onde é possível editar, excluir e inativar os produtos.
+Também é possível ver os fornecedores e clientes do produto, assim como os movimentos do produto em uma tabela com várias informações.
 
 # Pedidos de Compra
 ## Novo Pedido de Compra (Botão)
-![Pedidos](images/fluxo-tela/Pedidos-compra-1.png)
+![Pedidos](images/fluxo-tela/Pedidos-Compra-1.png)
+Para cadastrar um novo pedido de compra, o usuário deve clicar em Pedido de Compra, e então em Novo Pedido.
+O usuário será redirecionado para uma tela de cadastro do pedido.
 
 ## Novo Pedido de Compra (Cadastro)
-![Pedidos](images/fluxo-tela/Pedidos-compra-2.png)
+![Pedidos](images/fluxo-tela/Pedidos-Compra-2.png)
+Na tela de cadastro de pedido, o usuário deve preencher as informações do pedido e selecionar os produtos e quantidades que irão compor o pedido.
+Não é necessário preencher o preço dos produtos, pois estes são preenchidos pelos fornecedores ao receberem o pedido.
+Ao clicar em Gerar Pedido, é feito o download de uma planilha do Excel com as informações do pedido, e o pedido é salvo no sistema com o status de "Em Aberto".
+Ao clicar em Concluir pedido, os dados do pedido são processados e os produtos são incrementados no estoque.
 
 ## Lista dos Pedidos de Compra (Tela)
-![Pedidos](images/fluxo-tela/Pedidos-compra-3.png)
+![Pedidos](images/fluxo-tela/Pedidos-Compra-3.png)
 
 # Pedidos de Venda
 ## Novo Pedido de Venda (Botão)
