Finalizando descrição das últimas telas 4.6-Telas da Aplicação.md

--- a/docs/4.6-Telas da Aplicação.md
+++ b/docs/4.6-Telas da Aplicação.md
@@ -106,17 +106,21 @@ Ao clicar em Gerar Pedido, é feito o download de uma planilha do Excel com as i
 Ao clicar em Concluir pedido, os dados do pedido são processados e os produtos são incrementados no estoque.
 
 ## Lista dos Pedidos de Compra (Tela)
-![Pedidos](images/fluxo-tela/Pedidos-Compra-3.png)
+![Pedidos](images/fluxo-tela/Pedidos-Compra-3.png)  
+Na tela de Lista dos Pedidos de Compra vão constar a data que foi realizado o pedido, seu status, seu número, código do usuário que realizou e seu respectivo nome. Assim é possível visualizar em tempo real a situação de cada compra.
 
 # Pedidos de Venda
 ## Novo Pedido de Venda (Botão)
-![Pedidos](images/fluxo-tela/Pedidos-Venda-1.png)
+![Pedidos](images/fluxo-tela/Pedidos-Venda-1.png)  
+Tela onde o usuário segue o fluxo para registrar um novo pedido de venda que foi confirmado entre a distribuidora e o cliente.
 
 ## Novo Pedido de Venda (Cadastro)
-![Pedidos](images/fluxo-tela/Pedidos-Venda-2.png)
+![Pedidos](images/fluxo-tela/Pedidos-Venda-2.png)  
+Aqui o usuário tem à disposição todos os campos necessários para registrar o pedido confirmado, de forma a ter um controle total de todas as demandas do cliente.
 
 ## Lista dos Pedidos de Venda (Tela)
-![Pedidos](images/fluxo-tela/Pedidos-Venda-3.png)
+![Pedidos](images/fluxo-tela/Pedidos-Venda-3.png)  
+Assim como na Lista dos Pedidos de Compra, com intuito semelhante temos a Lista dos Pedidos de Venda, para saber seu status, data, número e a identificação do usuário que a realizou.
 
 # Logout (Botão)
 ![Logout](images/fluxo-tela/Logout.png)
