--- a/docs/4.3-Casos de Uso.md
+++ b/docs/4.3-Casos de Uso.md
@@ -2,26 +2,35 @@
 A documentação de casos de uso descrita a seguir oferece uma visão geral e simplificada das funcionalidades chave do sistema, facilitando a compreensão dos processos pelos quais os usuários podem efetuar suas principais tarefas:
 ### RF-001 Login
 Usuários acessam o sistema inserindo suas credenciais. Uma validação bem-sucedida redireciona para a tela principal, enquanto erros nas credenciais geram mensagens de alerta.
-![Login](https://github.com/luizfelipelinhares/TIS-Grupo10/assets/64663542/995ea9a8-115b-4fe6-816c-7510a8a5860f)
+![Login](images/usecase/usecase-login.png)
 
-### RF-003 Cadastrar, visualizar, editar, excluir
-Usuários com permissões adequadas podem adicionar, visualizar, editar e excluir registros. Esse conjunto de funcionalidades é essencial para manter atualizadas as informações sobre produtos, clientes e fornecedores.
-![Cadastrar, visualizar, editar, excluir](https://github.com/luizfelipelinhares/TIS-Grupo10/assets/64663542/e04c1837-b61d-4f02-9aae-8b7a2e4a95d7)
+### RF-003 Cadastrar, visualizar, editar e excluir produtos e kits
+Usuários com permissões adequadas podem adicionar, visualizar, editar e excluir registros. Esse conjunto de funcionalidades é essencial para manter atualizadas as informações sobre produtos e kits.
+![Cadastrar, visualizar, editar, excluir](images/usecase/usecase-produtos.png)
 
-### RF-005 Inativar produtos
-Permite que usuários inativem produtos que não estão mais disponíveis para venda, mantendo-os registrados para fins históricos.
-![Inativar produtos](https://github.com/luizfelipelinhares/TIS-Grupo10/assets/64663542/128618f5-7e66-48a4-97f0-508a47441ae5)
+### RF-005 Inativar produtos e kits
+Permite que usuários inativem produtos e kits que não estão mais disponíveis para venda, mantendo-os registrados para fins históricos.
+![Inativar produtos](images/usecase/usecase-inativarprodutosekits.png)
+
+### RF-006 Cadastrar, visualizar, editar e excluir fornecedores
+Usuários com permissões adequadas podem adicionar, visualizar, editar e excluir registros. Esse conjunto de funcionalidades é essencial para manter atualizadas as informações sobre fornecedores.
+![Cadastrar, visualizar, editar, excluir](images/usecase/usecase-fornecedores.png)
+
+### RF-007 Cadastrar, visualizar, editar e excluir clientes
+Usuários com permissões adequadas podem adicionar, visualizar, editar e excluir registros. Esse conjunto de funcionalidades é essencial para manter atualizadas as informações sobre clientes.
+![Cadastrar, visualizar, editar, excluir](images/usecase/usecase-clientes.png)
+
+### RF-008 Inativar fornecedores e clientes
+Permite que usuários inativem fornecedores e clientes que não estão mais no negócio, mantendo-os registrados para fins históricos.
+![Inativar produtos](images/usecase/usecase-inativarcef.png)
 
 ### RF-015 Gerar orçamento de compras e vendas
 Os usuários podem gerar orçamentos detalhados para compras e vendas, facilitando o processo de negociação e registro de transações comerciais.
-![Gerar orçamento de compras e vendas](images/usecase/usecase-orçamento.png)
+![Gerar orçamento de compras e vendas](images/usecase/usecase-orcamento.png)
 
-### RF-018 Registrar movimentos de estoque
+### RF-018 Registrar movimento de entrada e saída do estoque
 Essencial para o controle de estoque, esta funcionalidade permite registrar entradas e saídas de produtos, ajudando a manter a acurácia dos dados de inventário.
-![Registrar movimentos de estoque](images/usecase/usecase-movimento.png)
+![Registrar movimentos de estoque](images/usecase/usecase-movimentoestoque.png)
 
-### RF-023 Montar kits
-Os usuários podem combinar diferentes produtos em kits para venda ou distribuição, otimizando o processo de oferta de pacotes combinados.
-![Montar kits](images/usecase/usecase-kits.png)
 
 [4.4 - Diagrama de Classes](4.4-Projeto.md)
