Melhorando descrição de telas finais 4.6-Telas da Aplicação.md

--- a/docs/4.6-Telas da Aplicação.md
+++ b/docs/4.6-Telas da Aplicação.md
@@ -107,12 +107,12 @@ Ao clicar em Concluir pedido, os dados do pedido são processados e os produtos 
 
 ## Lista dos Pedidos de Compra (Tela)
 ![Pedidos](images/fluxo-tela/Pedidos-Compra-3.png)  
-Na tela de Lista dos Pedidos de Compra vão constar a data que foi realizado o pedido, seu status, seu número, código do usuário que realizou e seu respectivo nome. Assim é possível visualizar em tempo real a situação de cada compra.
+Aqui na tela de Lista dos Pedidos de Compra, o usuário clica em uma opção como forma dele poder digitar a característica do pedido de compra e encontrá-lo. No resultado da pesquisa, vão constar a data que foi realizado o pedido, seu status, seu número, código do usuário que realizou e seu respectivo nome. Assim é possível visualizar em tempo real a situação de cada compra.
 
 # Pedidos de Venda
 ## Novo Pedido de Venda (Botão)
 ![Pedidos](images/fluxo-tela/Pedidos-Venda-1.png)  
-Tela onde o usuário segue o fluxo para registrar um novo pedido de venda que foi confirmado entre a distribuidora e o cliente.
+Tela onde o usuário clica em "Pedidos", "Pedidos de venda" e "Novo pedido", afim de registrar um novo pedido de venda que foi confirmado entre a distribuidora e o cliente.
 
 ## Novo Pedido de Venda (Cadastro)
 ![Pedidos](images/fluxo-tela/Pedidos-Venda-2.png)  
@@ -120,7 +120,7 @@ Aqui o usuário tem à disposição todos os campos necessários para registrar 
 
 ## Lista dos Pedidos de Venda (Tela)
 ![Pedidos](images/fluxo-tela/Pedidos-Venda-3.png)  
-Assim como na Lista dos Pedidos de Compra, com intuito semelhante temos a Lista dos Pedidos de Venda, para saber seu status, data, número e a identificação do usuário que a realizou.
+Na Lista dos Pedidos de Venda, o usuário clica em uma opção como forma dele poder digitar a característica do pedido de venda e encontrá-lo. No resultado da pesquisa, vão constar a data que foi realizado o pedido, seu status, seu número, código do usuário que realizou e seu respectivo nome. Assim é possível visualizar em tempo real a situação de cada venda.
 
 # Logout (Botão)
 ![Logout](images/fluxo-tela/Logout.png)
