Atualizações nos protótipos de telas.

--- a/docs/4.6-Telas da Aplicação.md
+++ b/docs/4.6-Telas da Aplicação.md
@@ -122,6 +122,22 @@ Aqui o usuário tem à disposição todos os campos necessários para registrar 
 ![Pedidos](images/fluxo-tela/Pedidos-Venda-3.png)  
 Assim como na Lista dos Pedidos de Compra, com intuito semelhante temos a Lista dos Pedidos de Venda, para saber seu status, data, número e a identificação do usuário que a realizou.
 
+# Relatórios
+Optamos por um modal simples para gerar relatórios de entradas, saídas e produtos em estoque.
+
+## Relatórios (Botão)
+![Relatorios](images/fluxo-tela/Relatorios-1.png)  
+Para gerar o relatório, o usuário deve clicar no botão Relatórios. Após isso será exibido um Modal com os campos de filtro.
+
+# Relatório (Modal)
+![Relatorios](images/fluxo-tela/Relatorios-2.png)  
+Modal com os filtros e botões para gerar os relatório (filtros de data, apenas), e botão para selecionar o tipo do relatório.
+Ao clicar em Gerar, é feito o download de uma planilha do excel com as informações do relatório.
+
+# Relatório (Modal)
+![Relatorios](images/fluxo-tela/Relatorios-3.png)  
+Exemplo do botão de selecionar o modelo do relatório.
+
 # Logout (Botão)
 ![Logout](images/fluxo-tela/Logout.png)
 Para fazer o Logout, o usuário deve clicar no botão com o seu nome, e então clicar em Sair.
