--- a/docs/4.1-Tecnologias-utilizadas.md
+++ b/docs/4.1-Tecnologias-utilizadas.md
@@ -5,4 +5,4 @@ Para o banco de dados vamos utilizar o SQL Server e para fazer a conexão com ba
 
 Optamos também por utilizar um framework front-end da Microsoft chamado Fluent UI para a estilização da ferramenta por possuir recursos prontos interessantes como menus e tabelas com filtros. Para a publicação da ferramenta, iremos utilizar o Azure App Services.  
 
-[Próximo: 4.2 - Requisitos Funcionais e Não Funcionais](4.2-Projeto.md)
+[Próximo: 4.2 - Requisitos](4.2-Requisitos.md)
