--- a/docs/4.3-Casos-de-uso.md
+++ b/docs/4.3-Casos-de-uso.md
@@ -33,4 +33,4 @@ Essencial para o controle de estoque, esta funcionalidade permite registrar entr
 ![Registrar movimentos de estoque](images/usecase/usecase-movimentoestoque.png)
 
 
-[4.4 - Diagrama de Classes](4.4-Projeto.md)
+[4.4 - Diagrama de Classes](4.4-Banco-de-dados.md)
