--- a/docs/5.3-Planejamento-da-implantação-do-produto.md
+++ b/docs/5.3-Planejamento-da-implantação-do-produto.md
@@ -1,4 +1,6 @@
-### 1. *Análise da Implantação*
+# 5.3. Planejamento da implantação do produto
+
+## 5.3.1. Análise da Implantação
 
 *Objetivo:* Substituir o Excel por uma aplicação web para gerenciar o controle de estoque e a geração de orçamentos, melhorando a agilidade, segurança e efetividade.
 
@@ -31,7 +33,7 @@
   - Monitoramento contínuo para identificar e corrigir bugs.
   - Feedback dos usuários para melhorias.
 
-### 2. *Plano de Marketing*
+## 5.3.2. Plano de Marketing
 
 *Objetivo:* Promover a aplicação web para atrair novos clientes e fortalecer a base de clientes existente.
 
@@ -54,7 +56,7 @@
   - Parcerias com fabricantes de peças e fornecedores para promover a aplicação.
   - Participação em eventos da indústria para demonstração do sistema.
 
-### 3. *Modelo de Precificação*
+## 5.3.3. Modelo de Precificação
 
 *Objetivo:* Definir um preço competitivo que cubra os custos e gere lucro.
 
@@ -76,7 +78,7 @@
   - Descontos para contratos de longo prazo.
   - Períodos de teste gratuito para novos clientes.
 
-### 4. *Modelo de Distribuição*
+## 5.3.4. Modelo de Distribuição
 
 *Objetivo:* Garantir que a aplicação esteja acessível e disponível para todos os clientes da L&R Kits e Freios.
 
