--- a/docs/5.2-Indicadores-e-objetivos-do-negócio.md
+++ b/docs/5.2-Indicadores-e-objetivos-do-negócio.md
@@ -3,48 +3,48 @@
 ## 5.2.1 Objetivos 
 
 ### Objetivos de Curto Prazo (6 meses) 
-1. Reduzir o Estoque de Produtos Sem Saída:
+#### 1. Reduzir o Estoque de Produtos Sem Saída:
 - Meta: Reduzir em 20% a quantidade de produtos sem saída.
 - Indicador Relevante: Produtos Sem Saída.
 - Ação: Identificar os produtos parados e implementar promoções ou descontos para incentivarem as vendas.
-2. Aumentar a Rotação de Estoque:
+#### 2. Aumentar a Rotação de Estoque:
 - Meta: Aumentar o giro de estoque de 4x para 5x por ano.
 - Indicador Relevante: Giro de Estoque.
 - Ação: Melhorar a previsão de demanda e ajustar os níveis de estoque de acordo.
-3. Monitorar Produtos com Baixo Estoque:
+#### 3. Monitorar Produtos com Baixo Estoque:
 - Meta: Garantir que nenhum produto essencial fique abaixo do nível mínimo de estoque.
 - Indicador Relevante: Produtos com Baixo Estoque.
 - Ação: Revisar e ajustar os níveis mínimos de estoque com base na demanda.
 
-Objetivos de Médio Prazo (1 ano)
-1. Reduzir o Custo Médio de Estoque:
+### Objetivos de Médio Prazo (1 ano)
+#### 1. Reduzir o Custo Médio de Estoque:
 - Meta: Reduzir o custo médio de estoque em 15%.
 - Indicador Relevante: Custo Médio de Estoque.
 - Ação: Negociar melhores condições com fornecedores e otimizar a compra de itens.
-2. Equilibrar o Estoque:
+#### 2. Equilibrar o Estoque:
 - Meta: Reduzir a quantidade de produtos com estoque muito alto em 30%.
 - Indicador Relevante: Produtos com Estoque Muito Alto.
 - Ação: Implementar melhores práticas de gestão de estoque, como Just in Time.
-3. Melhorar a Relação com os Fornecedores:
+#### 3. Melhorar a Relação com os Fornecedores:
 - Meta: Aumentar em 20% as compras de fornecedores com melhores condições e qualidade.
 - Indicador Relevante: Estatística de Compras com Fornecedores.
 - Ação: Avaliar o desempenho dos fornecedores e focar em parcerias estratégicas.
 
-Metas de Longo Prazo (3 anos)
-1. Aumentar a Satisfação do Cliente:
+### Metas de Longo Prazo (3 anos)
+#### 1. Aumentar a Satisfação do Cliente:
 - Meta: Aumentar a frequência de compra dos 10 principais clientes em 25%.
 - Indicador Relevante: Estatística de Vendas para os Clientes.
 - Ação: Implementar programas de fidelidade e melhorar o atendimento ao cliente.
-2. Otimizar o Giro de Estoque:
+#### 2. Otimizar o Giro de Estoque:
 - Meta: Aumentar o giro de estoque de 5x para 6x por ano.
 - Indicador Relevante: Giro de Estoque.
 - Ação: Implementar um sistema de gerenciamento de estoque mais avançado e contínuo treinamento para a equipe de estoque.
-3. Desenvolver uma Gestão de Estoques Eficiente:
+#### 3. Desenvolver uma Gestão de Estoques Eficiente:
 - Meta: Reduzir em 40% o número de produtos com baixo e alto estoque.
 - Indicador Relevante: Produtos com Baixo Estoque e Produtos com Estoque Muito Alto.
 - Ação: Adotar técnicas de previsão de demanda mais precisas e um sistema de reposição automática.
 
-Utilização dos Indicadores para Atingir as Metas
+### Utilização dos Indicadores para Atingir as Metas
 - Produtos Sem Saída: Identificar e realizar ações corretivas para produtos sem movimento, ajudando a liberar capital de giro.
 - Giro de Estoque: Monitorar e ajustar constantemente para manter um bom fluxo de vendas e evitar excesso ou falta de produtos.
 - Custo Médio de Estoque: Reduzir custos para aumentar a margem de lucro, buscando melhores condições de compra.
@@ -52,8 +52,9 @@ Utilização dos Indicadores para Atingir as Metas
 - Estatística de Compras com Fornecedores: Utilizar dados de compras para negociar melhores condições e consolidar parcerias estratégicas.
 - Estatística de Vendas para os Clientes: Analisar o comportamento de compra dos clientes para desenvolver estratégias de retenção e aumento de vendas.
 
-5.2.2 INDICADORES
-Giro de Estoque
+## 5.2.2 INDICADORES 
+
+### Giro de Estoque
 Unidade de medida do indicador:  Vezes por período (Ex.: vezes por ano)
 prioridade de cálculo: Alta
 Setor ou pessoa responsável: Setor de Controle de Estoque
@@ -64,7 +65,7 @@ Como e onde a variável será capturada: CMV: Extraído do sistema de vendas
 Estoque Médio: Calculado como a média dos estoques no início e no final do período
 Usuário para o indicador: Gerente de Estoque
 
-Custo Médio de Estoque
+### Custo Médio de Estoque
 Unidade de medida do indicador: Unidade monetária (Ex.: R$)
 Prioridade de cálculo: Alta
 Setor responsável: Setor de Contabilidade
@@ -76,7 +77,7 @@ Variáveis que permitem o cálculo:
 Como e onde a variável será capturada: Extraído do sistema de gestão de estoques. 
 Usuário para o indicador: Gerente de Compras
 
-Produtos Sem Saída
+### Produtos Sem Saída
 Unidade de medida do indicador: Quantidade de itens
 Prioridade de cálculo: Média
 Setor responsável: Setor de Vendas
@@ -87,7 +88,7 @@ Variáveis que permitem o cálculo: Quantidade de Produtos Sem Vendas em mais de
 Como e onde a variável será capturada: Extraído do sistema de vendas
 Usuário para o indicador: Gerente de Vendas
 
-Produtos com Baixo Estoque
+### Produtos com Baixo Estoque
 Unidade de medida do indicador: Quantidade de itens
 Prioridade de cálculo: Alta
 Setor responsável: Setor de Controle de Estoque
@@ -97,7 +98,7 @@ Variáveis que permitem o cálculo: Quantidade de Produtos com Nível de Estoque
 Como e onde a variável será capturada: Extraído do sistema de gestão de estoques
 Usuário para o indicador: Gerente de Compras
 
-Produtos com Estoque Muito Alto
+### Produtos com Estoque Muito Alto
 Unidade de medida do indicador: Quantidade de itens
 Prioridade de cálculo: Média
 Setor responsável: Setor de Controle de Estoque
@@ -107,7 +108,7 @@ Variáveis que permitem o cálculo: Quantidade de Produtos com Nível de Estoque
 Como e onde a variável será capturada: Extraído do sistema de gestão de estoques
 Usuário para o indicador: Gerente de Compras
 
-Estatística de Compras com os Fornecedores
+### Estatística de Compras com os Fornecedores
 Unidade de medida do indicador: Quantidade de itens comprados
 Prioridade de cálculo: Média
 Setor responsável: Setor de Compras
@@ -119,7 +120,7 @@ Variáveis que permitem o cálculo:
 Como e onde a variável será capturada: Extraído do sistema de compras
 Usuário para o indicador: Gerente de Compras
 
-Estatística de Vendas para os Clientes
+### Estatística de Vendas para os Clientes
 Unidade de medida do indicador: Quantidade de itens vendidos
 Prioridade de cálculo: Média
 Setor responsável: Setor de Vendas
