Correções de formatação e inserçao de links de navegação

--- a/docs/4.6-Telas-da-aplicação.md
+++ b/docs/4.6-Telas-da-aplicação.md
@@ -141,3 +141,5 @@ Exemplo do botão de selecionar o modelo do relatório.
 # Logout (Botão)
 ![Logout](images/fluxo-tela/Logout.png)
 Para fazer o Logout, o usuário deve clicar no botão com o seu nome, e então clicar em Sair.
+
+[Próximo: 5.1 - Protótipo da Aplicação](5.1-Protótipo.md)
