--- a/docs/4.6-Telas-da-aplicacao.md
+++ b/docs/4.6-Telas-da-aplicacao.md
@@ -92,7 +92,7 @@ Tela para seleção dos produtos que irão compor o Kit, com um campo de busca p
 Tela de detalhes do produto, onde é possível editar, excluir e inativar os produtos.
 Também é possível ver os fornecedores e clientes do produto, assim como os movimentos do produto em uma tabela com várias informações.
 
-# Pedidos de Compra
+# Movimentação do Estoque
 ## Novo Pedido de Compra (Botão)
 ![Pedidos](images/fluxo-tela/Pedidos-Compra-1.png)
 Para cadastrar um novo pedido de compra, o usuário deve clicar em Pedido de Compra, e então em Novo Pedido.
@@ -109,7 +109,6 @@ Ao clicar em Concluir pedido, os dados do pedido são processados e os produtos 
 ![Pedidos](images/fluxo-tela/Pedidos-Compra-3.png)  
 Aqui na tela de Lista dos Pedidos de Compra, o usuário clica em uma opção como forma dele poder digitar a característica do pedido de compra e encontrá-lo. No resultado da pesquisa, vão constar a data que foi realizado o pedido, seu status, seu número, código do usuário que realizou e seu respectivo nome. Assim é possível visualizar em tempo real a situação de cada compra.
 
-# Pedidos de Venda
 ## Novo Pedido de Venda (Botão)
 ![Pedidos](images/fluxo-tela/Pedidos-Venda-1.png)  
 Tela onde o usuário clica em "Pedidos", "Pedidos de venda" e "Novo pedido", afim de registrar um novo pedido de venda que foi confirmado entre a distribuidora e o cliente.
@@ -142,4 +141,4 @@ Exemplo do botão de selecionar o modelo do relatório.
 ![Logout](images/fluxo-tela/Logout.png)
 Para fazer o Logout, o usuário deve clicar no botão com o seu nome, e então clicar em Sair.
 
-[Próximo: 5.1 - Protótipo da Aplicação](5.1-Protótipo.md)
+[Próximo: 5.1 - Protótipo da Aplicação](5.1-Prototipo.md)
