--- a/docs/5.2-Indicadores-e-objetivos-do-negocio.md
+++ b/docs/5.2-Indicadores-e-objetivos-do-negocio.md
@@ -136,4 +136,4 @@ Variáveis que permitem o cálculo:
 Como e onde a variável será capturada: Extraído do sistema de vendas
 Usuário para o indicador: Gerente de Vendas
 
-[Próximo: 5.3 - Planejamento da implantação do produto](5.3-Planejamento-da-implantação-do-produto.md)
+[Próximo: 5.3 - Planejamento da implantação do produto](5.3-Planejamento-da-implantacao-do-produto.md)
