--- a/docs/4.4-Banco-de-dados.md
+++ b/docs/4.4-Banco-de-dados.md
@@ -12,4 +12,4 @@ Ao final, temos as tabelas "Usuario" e "UsuarioPermissao" que se relacionam em u
 
 ![DiagramaEntidadeRelacionamento](images/database/entidade-relacionamento.png)
 
-[4.5 - Fluxo da aplicação](4.5-Fluxo-da-aplicação.md)
+[Próximo: 4.5 - Fluxo da aplicação](4.5-Fluxo-da-aplicacao.md)
