--- a/docs/5.1-Prototipo.md
+++ b/docs/5.1-Prototipo.md
@@ -2,7 +2,7 @@
 
 O protótipo da aplicação está disponível em [Telas da aplicação](4.6-Telas-da-aplicacao.md), e os requisitos foram atendidos da seguinte maneira:
 
-### Requisitos Funcionais
+## Requisitos Funcionais
 |  ID	|  Descrição do Requisito	| Tela Correspondente |
 |  ---  |  ---  | --- |
 |  RF-001  |  Fazer login através de conta microsoft					| [Tela Inicial](4.6-Telas-da-aplicacao.md#Tela-inicial) |
@@ -18,5 +18,54 @@ O protótipo da aplicação está disponível em [Telas da aplicação](4.6-Tela
 |  RF-012  |  Gerar relatório de entradas e saídas						| [Relatórios](4.6-Telas-da-aplicacao.md#relatorios) |
 |  RF-013  |  Gerar relatório de produtos em estoque					| [Relatórios](4.6-Telas-da-aplicacao.md#relatorios) |
 |  RF-014  |  Visualizar os movimentos do estoque						| [Lista de Entradas](4.6-Telas-da-aplicacao.md#lista-dos-pedidos-de-compra-tela) <br> [Lista de Saídas](4.6-Telas-da-aplicacao.md#lista-dos-pedidos-de-venda-tela)|
+
+## Banco de Dados
+
+Abaixo estão os exemplos das tabelas devidamente preenchidas com informações de teste no banco de dados.
+
+### Tabelas Criadas
+Demonstração das tabelas criadas no banco da dados.
+![DiagramaEntidadeRelacionamento](images/database/bd-0.png)
+
+### Tabela Pedido
+Tabela que armazena as informações dos pedidos.
+![DiagramaEntidadeRelacionamento](images/database/bd-Pedido.png)
+
+### Tabela PedidoStatus
+Tabela que armazena os tipos de status que o pedido pode ter.
+![DiagramaEntidadeRelacionamento](images/database/bd-PedidoStatus.png)
+
+### Tabela PedidoTipo
+Tabela que armazena os tipos do pedido (compra ou venda), se é entrada ou saída.
+![DiagramaEntidadeRelacionamento](images/database/bd-PedidoTipo.png)
+
+### Tabela Pessoa
+Tabela que armazena as informações dos clientes e fornecedores
+![DiagramaEntidadeRelacionamento](images/database/bd-Pessoa.png)
+
+### Tabela PessoaStatus
+Tabela que armazena os status dos clientes e forneccedores.
+![DiagramaEntidadeRelacionamento](images/database/bd-PessoaStatus.png)
+
+### Tabela Produto
+Tabela que armazena as informações dos produtos cadastrados.
+![DiagramaEntidadeRelacionamento](images/database/bd-Produto.png)
+
+### Tabela ProdutoKit
+Tabela que relaciona os kits com os produtos que compõe os kits.
+![DiagramaEntidadeRelacionamento](images/database/bd-ProdutoKit.png)
+
+### Tabela ProdutoMovimento
+Tabela que armazena o movimento de entrada ou saída do estoque.
+![DiagramaEntidadeRelacionamento](images/database/bd-ProdutoMovimento.png)
+
+### Tabela Usuario
+Tabela que armazena as informações dos usuários que podem acessar o sistema.
+![DiagramaEntidadeRelacionamento](images/database/bd-Usuario.png)
+
+### Tabela UsuarioPermissao
+Tabela que armazena os tipos de permissão que os usuários podem ter.
+![DiagramaEntidadeRelacionamento](images/database/bd-UsuarioPermissao.png)
+
 
 [Próximo: 5.2 - Indicadores e objetivos do negócio](5.2-Indicadores-e-objetivos-do-negocio.md)
