Correções de texto.

--- a/docs/5.1-Prototipo.md
+++ b/docs/5.1-Prototipo.md
@@ -21,34 +21,34 @@ O protótipo da aplicação está disponível em [Telas da aplicação](4.6-Tela
 
 ## Banco de Dados
 
-Abaixo estão os exemplos das tabelas devidamente preenchidas com informações de teste no banco de dados.
+Abaixo estão os exemplos das tabelas criadas e preenchidas com informações de teste no banco de dados SQL Server. As tabelas abaixo foram criadas utilizando EntityFrameworkCore. O relacionamento entre as tabelas pode ser encontrado em: [Diagrama de Classes](4.4-Banco-de-dados.md).
 
 ### Tabelas Criadas
 Demonstração das tabelas criadas no banco da dados.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-0.png)
 
 ### Tabela Pedido
-Tabela que armazena as informações dos pedidos.  
+Armazena as informações dos pedidos.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-Pedido.png)
 
 ### Tabela PedidoStatus
-Tabela que armazena os tipos de status que o pedido pode ter.  
+Armazena os tipos de status que o pedido pode ter.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-PedidoStatus.png)
 
 ### Tabela PedidoTipo
-Tabela que armazena os tipos do pedido (compra ou venda), se é entrada ou saída.  
+Armazena os tipos do pedido (compra ou venda), se é entrada ou saída.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-PedidoTipo.png)
 
 ### Tabela Pessoa
-Tabela que armazena as informações dos clientes e fornecedores  
+Armazena as informações dos clientes e fornecedores  
 ![DiagramaEntidadeRelacionamento](images/database/bd-Pessoa.png)
 
 ### Tabela PessoaStatus
-Tabela que armazena os status dos clientes e forneccedores.  
+Armazena os status dos clientes e forneccedores.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-PessoaStatus.png)
 
 ### Tabela Produto
-Tabela que armazena as informações dos produtos cadastrados.  
+Armazena as informações dos produtos cadastrados.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-Produto.png)
 
 ### Tabela ProdutoKit
@@ -56,15 +56,15 @@ Tabela que relaciona os kits com os produtos que compõe os kits.
 ![DiagramaEntidadeRelacionamento](images/database/bd-ProdutoKit.png)
 
 ### Tabela ProdutoMovimento
-Tabela que armazena o movimento de entrada ou saída do estoque.  
+Armazena o movimento de entrada ou saída do estoque.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-ProdutoMovimento.png)
 
 ### Tabela Usuario
-Tabela que armazena as informações dos usuários que podem acessar o sistema.  
+Armazena as informações dos usuários que podem acessar o sistema.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-Usuario.png)
 
 ### Tabela UsuarioPermissao
-Tabela que armazena os tipos de permissão que os usuários podem ter.  
+Armazena os tipos de permissão que os usuários podem ter.  
 ![DiagramaEntidadeRelacionamento](images/database/bd-UsuarioPermissao.png)
 
 
