Correções de formatação

--- a/docs/5.2-Indicadores-e-objetivos-do-negocio.md
+++ b/docs/5.2-Indicadores-e-objetivos-do-negocio.md
@@ -57,7 +57,7 @@
 - Estatística de Compras com Fornecedores: Utilizar dados de compras para negociar melhores condições e consolidar parcerias estratégicas.
 - Estatística de Vendas para os Clientes: Analisar o comportamento de compra dos clientes para desenvolver estratégias de retenção e aumento de vendas.
 
-## 5.2.2 INDICADORES 
+## 5.2.2 Indicadores 
 ### Giro de Estoque
 Unidade de medida do indicador:  Vezes por período (Ex.: vezes por ano)
 prioridade de cálculo: Alta
